--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,6 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>io.github.jdiscordbots</groupId>
-		<artifactId>jdiscordbots-parent</artifactId>
-		<version>1.0.3</version>
-	</parent>
 	<groupId>io.github.danthe1st</groupId>
 	<artifactId>yagpl</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,17 +11,22 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>12.0.2</version>
+			<version>14</version>
 		</dependency>
+		<dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-fxml</artifactId>
+        <version>14</version>
+    </dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>14</source>
-					<target>14</target>
+					<release>14</release>
 				</configuration>
 			</plugin>
 		</plugins>
