--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+program.dat
+
 # Created by https://www.gitignore.io/api/java,linux,macos,maven,gradle,windows,eclipse,intellij+all
 # Edit at https://www.gitignore.io/?templates=java,linux,macos,maven,gradle,windows,eclipse,intellij+all
 
