--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
 					<release>14</release>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.4</version>
+				<configuration>
+					<source>14</source>
+					<target>14</target>
+					<release>14</release>
+					<mainClass>io.github.danthe1st.yagpl.ui.YAGPL</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
