--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,16 @@ jobs:
         java-version: '14'
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -B compile assembly:single -Djavafx.platform=${{ matrix.buildPlatform }}
+      run: mvn -B assembly:single package -Djavafx.platform=${{ matrix.buildPlatform }}
     - name: change JAR name
       run: mv target/yagpl-jar-with-dependencies.jar yagpl-${{ matrix.buildPlatform }}.jar
-    - name: Upload JAR
+#    - name: Upload JAR
+#      uses: actions/upload-artifact@v2.2.3
+#      with:
+#        name: YAGPL
+#        path: yagpl-${{ matrix.buildPlatform }}.jar
+    - name: Upload installer
       uses: actions/upload-artifact@v2.2.3
       with:
         name: YAGPL
-        path: yagpl-${{ matrix.buildPlatform }}.jar
+        path: target/yagpl-*
