--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B assembly:single package -Djavafx.platform=${{ matrix.buildPlatform }}
     - name: change JAR name
-      run: mv target/yagpl-jar-with-dependencies.jar yagpl-${{ matrix.buildPlatform }}.jar
+      run: |
+        rm target/yagpl-${{ matrix.buildPlatform }}.jar
+        mv target/yagpl-jar-with-dependencies.jar target/yagpl-${{ matrix.buildPlatform }}.jar
 #    - name: Upload JAR
 #      uses: actions/upload-artifact@v2.2.3
 #      with:
@@ -26,4 +28,4 @@ jobs:
       uses: actions/upload-artifact@v2.2.3
       with:
         name: YAGPL
-        path: target/yagpl-*
+        path: target/yagpl*
