--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,7 @@
 			</activation>
 			<properties>
 				<installer.type>MSI</installer.type>
+				<javafx.platform>win</javafx.platform>
 			</properties>
 		</profile>
 		<profile>
@@ -244,6 +245,7 @@
 			</activation>
 			<properties>
 				<installer.type>DEB</installer.type>
+				<javafx.platform>linux</javafx.platform>
 			</properties>
 		</profile>
 		<profile>
@@ -255,6 +257,7 @@
 			</activation>
 			<properties>
 				<installer.type>DMG</installer.type>
+				<javafx.platform>mac</javafx.platform>
 			</properties>
 		</profile>
 	</profiles>
