--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '14'
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -B assembly:single package -Djavafx.platform=${{ matrix.buildPlatform }}
+      run: mvn -B assembly:single package
     - name: change JAR name
       run: |
         rm target/yagpl-0.0.1-SNAPSHOT.jar
@@ -36,3 +36,6 @@ jobs:
       with:
         name: YAGPL
         path: target/yagpl*
+    - name: show directory structure if failed
+      run: find target
+      if: ${{ failure() }}
